fixed background image jump on mobile

--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -38,6 +38,11 @@ mobile styles!
 		}
 	}
 
+	.header-content-container {
+		background-size: 150vh;
+		background-position: 33% 50%;
+	}
+
 	.header-menu {
 		a, a:visited, a:link, a:active {
 			font-size: 10px;
